@@ -6,6 +6,9 @@ xxx, S3QL HEAD
   * Fixed problem with fsck.s3ql generating extraordinary long
     filenames in /lost+found and then crashing. 
 
+  * When called as root, use umount rather than fusermount for
+    compatibility with FUSE4BSD.
+
 2011-05-20, S3QL 1.0.1
 
   * Disabled WAL mode again for now because of unexpected problems
